Document PPDG/src/objects/Internal_Case_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Action_Due__c</fullName>
        <label>Action Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Breached_External_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breached External SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Breached_Internal_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breached Internal SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Internal Case Audits</relationshipLabel>
        <relationshipName>Internal_Case_Audits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_Case_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Case_Assigned__c</fullName>
        <label>Time Case Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Case_Moved__c</fullName>
        <label>Time Case Moved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Taken__c</fullName>
        <label>Time Taken</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Internal Case Audit</label>
    <nameField>
        <label>Internal Case Audit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Case Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>